<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.ui.jetpack_navigation.NavGraphActivity">

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/your_pass"
            android:textColorHint="@color/hint"
            android:textColor="@color/black"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />

            <androidx.legacy.widget.Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/login"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@mipmap/google"
            android:text="@string/google"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark" />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/facebookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@mipmap/facebook"
            android:text="@string/facebook"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/background"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/logged_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="visible"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:visibility="visible"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/log_out"
            android:textColor="@android:color/white" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>